--- a/_layouts/schedule.html
+++ b/_layouts/schedule.html
@@ -34,11 +34,11 @@ layout: page
 <h2 id="class_schedule">Semester Schedule</h2>
 
 <iframe src=
-"https://docs.google.com/spreadsheets/d/e/2PACX-1vSLUy8PdeYt_U08wjjEThGqs_nachV7ceOJmcTtbWWDW_JiSZfpbr2q7Fsc4yAelDcnbVUUjta1A2lJ/pubhtml?gid=65899131&single=true&amp;widget=true&amp;headers=false" width="100%" height="990"></iframe>
+"https://docs.google.com/spreadsheets/d/e/2PACX-1vT5n6gF-79b8mFEiQMHx8PlLn9LbBLzt_N8niAZacSwYNaDKEzjubZDvdxvDsNLStqO5JzZx6sujr_3/pubhtml?gid=65899131&single=true&amp;widget=true&amp;headers=false" width="100%" height="990"></iframe>
 
 <h2 id="lab_oh_schedule">Weekly Schedule (Lecture, Lab, Office Hours)</h2>
 
-<iframe src="https://docs.google.com/spreadsheets/d/e/2PACX-1vRrkS9OK4DzrUYyB8Ixg2rUObYqDdLb2YfC37HD-DxIgAl7WyBmIsL38bTLo8ytQbmmIa2w2gIJN7jV/pubhtml?gid=65899131&amp;single=true&amp;widget=true&amp;headers=false" width="100%" height="650"></iframe>
+<iframe src="https://docs.google.com/spreadsheets/d/e/2PACX-1vT-BFR1Dg-u4Fpyoh8e2pVMs26a-uQMuFbhQZ1gCQvz2ZIIYo7ZLdjatzKw57RdQr5DWj_O0L5foE5W/pubhtml?gid=65899131&single=true&amp;widget=true&amp;headers=false" width="100%" height="650"></iframe>
 
 
 </div>
