--- a/_layouts/schedule.html
+++ b/_layouts/schedule.html
@@ -38,7 +38,7 @@ layout: page
 
 <h2 id="lab_oh_schedule">Weekly Schedule (Lecture, Lab, Office Hours)</h2>
 
-<iframe src="https://docs.google.com/spreadsheets/d/e/2PACX-1vT-BFR1Dg-u4Fpyoh8e2pVMs26a-uQMuFbhQZ1gCQvz2ZIIYo7ZLdjatzKw57RdQr5DWj_O0L5foE5W/pubhtml?gid=65899131&single=true&amp;widget=true&amp;headers=false" width="100%" height="650"></iframe>
+<iframe src="https://docs.google.com/spreadsheets/d/e/2PACX-1vT-BFR1Dg-u4Fpyoh8e2pVMs26a-uQMuFbhQZ1gCQvz2ZIIYo7ZLdjatzKw57RdQr5DWj_O0L5foE5W/pubhtml?gid=65899131&amp;single=true&amp;widget=true&amp;headers=false" width="100%" height="650"></iframe>
 
 
 </div>
