--- a/_includes/header.html
+++ b/_includes/header.html
@@ -42,7 +42,7 @@
         {% endif %}
         {% endunless %}
         {% endfor %}
-        <a class="page-link" href="https://canvas.harvard.edu/courses/">Canvas</a>
+        <a class="page-link" href="https://canvas.harvard.edu/courses/61741">Canvas</a>
         <a class="page-link" href="https://piazza.com/class/cs171">Piazza</a>
 
       </div>
