--- a/_includes/head.html
+++ b/_includes/head.html
@@ -5,8 +5,8 @@
   <meta name="viewport" content="width=device-width">
   <meta name="description" content="{{ site.description }}">
   <link rel="canonical" href="{{ page.url | replace:'index.html','' | prepend: site.baseurl | prepend: site.url }}">
-  <link href='http://fonts.googleapis.com/css?family=Baumans' rel='stylesheet' type='text/css'>
+  <link href="https://fonts.googleapis.com/css?family=Overpass:400,400i,700,900&display=swap" rel="stylesheet">
   <!-- Custom CSS -->
-  <link rel="stylesheet" href="{{ "/css/main.css" | prepend: site.baseurl }}">
+  <link rel="stylesheet" href="{{ '/css/main.css' | prepend: site.baseurl }}">
   <link rel="shortcut icon" type="image/x-icon" href="{{ site.baseurl }}/favicon.png">
 </head>
