--- a/_includes/footer_2019.html
+++ b/_includes/footer_2019.html
@@ -2,7 +2,13 @@
 
   <div class="wrap">
     <div class="flex-c flex-jc-sb flex-a-c">
-      <h2 class="footer-heading">Harvard STAT 250 (2019)</h2>
+      <h2 class="flex-c flex-v footer-heading">
+        <span class="footer-heading-harvard">Harvard</span>
+        <span class="flex-c">
+          <span class="footer-heading-stat">STAT 250</span>
+          <span class="footer-heading-year">2019</span>
+        </span>
+      </h2>
 
       <nav>
         <ul class="flex-c">
@@ -28,6 +34,10 @@
         </ul>
       </nav>
     </div>
+
+    <p class="attributions">
+      Logo and website design by <a href="https://lekschas.de">Fritz Lekschas</a>.
+    </p>
   </div>
 
 </footer>
