--- a/css/main.css
+++ b/css/main.css
@@ -347,15 +347,53 @@ table th, table td {
 }
 
 .footer-heading {
-  font-size: 1.25rem;
-  font-weight: 300;
+  margin-top: 0.2rem;
   margin-bottom: 1rem;
   color: black;
+}
+
+.footer-heading-harvard {
+  font-size: 0.8rem;
+  line-height: 1em;
+  font-weight: normal;
+  color: #666;
+}
+
+.footer-heading-stat {
+  font-size: 1.5rem;
+  line-height: 1em;
+  font-weight: 900;
+}
+
+.footer-heading-year {
+  margin-left: 0.5em;
+  padding: 0 0.3em;
+  font-size: 1rem;
+  line-height: 1.5em;
+  font-weight: 700;
+  color: black;
+  border-radius: 0.2em;
+  box-shadow: inset 0 0 0 1px black;
 }
 
 .site-footer .column {
   float: left;
   margin-bottom: 1rem;
+}
+
+.site-footer .attributions {
+  margin: 0.5em 0;
+  font-size: 0.875rem;
+  color: #999;
+}
+
+.site-footer .attributions a {
+  color: inherit;
+  box-shadow: inset 0 -1px 0 0 #ccc;
+}
+
+.site-footer .attributions a:hover {
+  color: #f5f5f5;
 }
 
 .footer-col-1 {
