Add FAS logo and make SEAS logo smaller

--- a/_includes/header_2019.html
+++ b/_includes/header_2019.html
@@ -20,12 +20,17 @@
       </div>
     </div>
 
-    <div id="harvard-logo">
+    <div id="harvard-logos">
       <img
-        id="harvard-logo-img"
+        class="harvard-logo"
         src="{{ site.baseurl }}/assets/images/harvard-seas-logo.svg"
-        alt="Harvard Logo"
+        alt="Harvard SEAS Logo"
         onerror="this.src='{{ site.baseurl }}/assets/images/harvard-seas-logo.png'"
+      />
+      <img
+        class="harvard-logo"
+        src="{{ site.baseurl }}/assets/images/harvard-fas-logo.png"
+        alt="Harvard FAS Logo"
       />
     </div>
 
