Optrimize mobile use

--- a/_includes/footer_2019.html
+++ b/_includes/footer_2019.html
@@ -1,12 +1,14 @@
 <footer class="site-footer">
 
   <div class="wrap">
-    <div class="flex-c flex-jc-sb flex-a-c">
+    <div class="flex-c flex-jc-sb site-footer-wrap">
       <h2 class="flex-c flex-v footer-heading">
         <span class="footer-heading-harvard">Harvard</span>
         <span class="flex-c">
           <span class="footer-heading-stat">STAT 250</span>
-          <span class="footer-heading-year">2019</span>
+          <span class="flex-c flex-a-c footer-heading-year">
+            <span>2019</span>
+          </span>
         </span>
       </h2>
 
