--- a/_includes/header.html
+++ b/_includes/header.html
@@ -8,7 +8,9 @@
           <div id="title-harvard">Harvard</div>
           <div class="flex-c">
             <span id="title-stat250">STAT 250</span>
-            <span id="title-year">2019</span>
+            <span id="title-year" class="flex-c flex-a-c">
+              <span>2019</span>
+            </span>
           </div>
         </div>
       </div>
