--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,7 +1,7 @@
 <footer class="site-footer">
 
   <div class="wrap">
-    <div class="flex-c flex-jc-sb flex-a-c">
+    <div class="flex-c flex-jc-sb site-footer-wrap">
       <h2 class="footer-heading">Harvard STAT 250</h2>
 
       <nav>
