--- a/css/main.css
+++ b/css/main.css
@@ -247,7 +247,6 @@ table th, table td {
 }
 
 .site-title-all {
-  width: 50%;
   float: left;
 }
 
@@ -298,6 +297,7 @@ table th, table td {
 
 .site-nav ul li {
   position: relative;
+  flex-grow: 1;
 }
 
 .site-nav ul a, .site-nav ul a:visited {
@@ -314,6 +314,7 @@ table th, table td {
   color: black;
   box-shadow: inset 0 0 0 1px #ddd;
   border-radius: 0;
+  background: #f5f5f5;
 }
 
 .site-nav ul a:hover,
@@ -338,6 +339,73 @@ table th, table td {
 .site-nav ul li:last-child a,
 .site-nav ul li:last-child a:hover {
   border-radius: 0 0.2em 0 0;
+}
+
+.site-nav {
+  -webkit-user-select: none;
+  user-select: none;
+}
+
+.site-nav input,
+.site-nav .nav-hamburger {
+  position: fixed;
+  display: none;
+  top: 1rem;
+  right: 1rem;
+  width: 3rem;
+  height: 3rem;
+}
+
+.site-nav input {
+  margin: 0;
+  padding: 0;
+  z-index: 4;
+  cursor: pointer;
+  opacity: 0;
+  -webkit-touch-callout: none;
+}
+
+.site-nav .nav-hamburger {
+  z-index: 3;
+  padding: 0.75rem 0.5rem;
+  background: #ac0bd2;
+  border-radius: 0.25rem;
+  transition: transform 0.5s cubic-bezier(0.25, 0.1, 0.25, 1);
+}
+
+.site-nav .nav-hamburger div {
+  position: relative;
+  width: 2rem;
+  height: 0.25rem;
+  margin-bottom: 0.375rem;
+  background: #f5f5f5;
+  border-radius: 0.1875rem;
+  z-index: 1;
+  transition: transform 0.5s cubic-bezier(0.25, 0.1, 0.25, 1),
+              background 0.5s cubic-bezier(0.25, 0.1, 0.25, 1),
+              opacity 0.55s cubic-bezier(0.25, 0.1, 0.25, 1);
+}
+
+.site-nav .nav-hamburger div {
+  transform-origin: 0% 50%;
+}
+
+.site-nav .nav-hamburger div:last-child {
+  margin-bottom: 0;
+}
+
+.site-nav input:checked ~ .nav-hamburger div {
+  opacity: 1;
+  transform: translate(0.3rem, -0.075rem) rotate(45deg);
+}
+
+.site-nav input:checked ~ .nav-hamburger div:nth-last-child(2) {
+  opacity: 0;
+  transform: rotate(0deg) scale(0.2, 0.2);
+}
+
+.site-nav input:checked ~ .nav-hamburger div:nth-last-child(1) {
+  transform: translate(0.3rem, +0.075rem) rotate(-45deg);
 }
 
 /* Site footer */
@@ -376,9 +444,8 @@ table th, table td {
   box-shadow: inset 0 0 0 1px black;
 }
 
-.site-footer .column {
-  float: left;
-  margin-bottom: 1rem;
+.site-footer-wrap {
+  align-items: center;
 }
 
 .site-footer .attributions {
@@ -396,42 +463,12 @@ table th, table td {
   color: #f5f5f5;
 }
 
-.footer-col-1 {
-  width: 270px;
-  /*fallback*/
-  width: -webkit-calc(35% - 10px);
-  width: -moz-calc(35% - 10px);
-  width: -o-calc(35% - 10px);
-  width: calc(35% - 10px);
-  margin-right: 10px;
-}
-
-.footer-col-2 {
-  width: 175px;
-  /*fallback*/
-  width: -webkit-calc(23.125% - 10px);
-  width: -moz-calc(23.125% - 10px);
-  width: -o-calc(23.125% - 10px);
-  width: calc(23.125% - 10px);
-  margin-right: 10px;
-}
-
-.footer-col-3 {
-  width: 335px;
-  /*fallback*/
-  width: -webkit-calc(41.875%);
-  width: -moz-calc(41.875%);
-  width: -o-calc(41.875%);
-  width: calc(41.875%);
-}
-
 .site-footer ul {
   list-style: none;
 }
 
 .site-footer li {
   display: block;
-  /*padding: 0 1px 0 0;*/
   margin: 0 -1px 0 0;
 }
 
@@ -937,65 +974,92 @@ table th, table td {
 /* Literal.Number.Integer.Long */
 /* media queries */
 /* ----------------------------------------------------------*/
-@media screen and (max-width: 750px) {
-  .footer-col-1 {
-    width: 50%;
+@media screen and (max-width: 60rem) {
+  #title-logo {
+    margin-left: 0;
   }
+}
 
-  .footer-col-2 {
-    width: 45%;
-    /*fallback*/
-    width: -webkit-calc(50% - 10px);
-    width: -moz-calc(50% - 10px);
-    width: -o-calc(50% - 10px);
-    width: calc(50% - 10px);
-    margin-right: 0;
-  }
-
-  .site-footer .column.footer-col-3 {
-    width: auto;
-    float: none;
-    clear: both;
-    } }
-@media screen and (max-width: 600px) {
+@media screen and (max-width: 40rem) {
   .wrap {
-    padding: 0 12px;
+    padding: 0 1rem;
   }
 
-  .site-nav {
-    position: fixed;
-    z-index: 10;
-    top: 14px;
-    right: 8px;
-    background-color: white;
-    -webkit-border-radius: 5px;
-    -moz-border-radius: 5px;
-    border-radius: 5px;
-    border: 1px solid #e8e8e8;
+  .page-content {
+    padding: 1rem 0;
   }
 
-  .site-nav .menu-icon {
+  .site-header {
+    padding-top: 1rem;
+    padding-bottom: 1rem;
+  }
+
+  .site-title-all {
+    width: 100%;
+    float: none;
+  }
+
+  .site-nav input {
     display: block;
-    font-size: 24px;
-    color: #505050;
-    float: right;
-    width: 36px;
-    text-align: center;
-    line-height: 36px;
   }
 
-  .site-nav .menu-icon svg {
-    width: 18px;
-    height: 16px;
+  .site-nav ul {
+    position: fixed;
+    z-index: 2;
+    top: 0;
+    left: 0;
+    margin-top: 0;
+    padding: 4.5rem 1rem 1rem 1rem;
+    flex-direction: column;
+    height: auto;
+    background: rgba(245, 245, 245, 0.9);
+    transform-origin: 0% 0%;
+    transform: translate(0, -100%);
+    transition: transform 0.5s cubic-bezier(0.25, 0.1, 0.25, 1);
   }
 
-  .site-nav .trigger {
-    clear: both;
-    margin-bottom: 5px;
-    display: none;
+  .site-nav ul:before {
+    content: 'Menu:';
+    position: absolute;
+    top: 1rem;
+    left: 1rem;
+    font-size: 2rem;
+    font-weight: 900;
+    line-height: 3rem;
+    color: black;
+    text-transform: uppercase;
   }
 
-  .site-nav:hover .trigger {
+  .site-nav input:checked ~ ul {
+    transform: none;
+  }
+
+  .site-nav ul li {
+    flex-grow: 0;
+  }
+
+  .site-nav ul a, .site-nav ul a:visited {
+    position: relative;
+    display: block;
+    height: 3rem;
+    padding: 0 0 1px 0;
+    margin: 0 0 -1px 0;
+    font-size: 1.25rem;
+    line-height: 3rem;
+    border-radius: 0;
+  }
+
+  .site-nav ul li:first-child a,
+  .site-nav ul li:first-child a:hover {
+    border-radius: 0.2em 0.2em 0 0;
+  }
+
+  .site-nav ul li:last-child a,
+  .site-nav ul li:last-child a:hover {
+    border-radius: 0 0 0.2em 0.2em;
+  }
+
+  .site-nav .nav-hamburger {
     display: block;
   }
 
@@ -1032,11 +1096,59 @@ table th, table td {
     padding-left: 10px;
   }
 
-  .site-footer .column {
-    float: none;
-    clear: both;
-    width: auto;
-    margin: 0 0 15px;
-    } }
+  .site-footer-wrap {
+    align-items: flex-start;
+  }
 
-/*# sourceMappingURL=main.css.map */
+  .site-footer nav ul {
+    flex-direction: column;
+  }
+
+  .site-footer nav li {
+    margin: 0 0 -1px 0;
+  }
+
+  .site-footer nav li:first-child a {
+    border-radius: 0.3em 0.3em 0 0;
+  }
+
+  .site-footer nav li:last-child a {
+    border-radius: 0 0 0.3em 0.3em;
+  }
+
+  #title-logo {
+    margin-left: 0;
+  }
+
+  #title-logo img {
+    width: 2.85rem;
+    height: 2.85rem;
+  }
+
+  #title-stat250 {
+    font-size: 2rem;
+  }
+
+  #title-year {
+    font-size: 1.25rem;
+    line-height: 2rem;
+  }
+
+  #harvard-logos {
+    display: none;
+  }
+}
+
+@media screen and (max-width: 20rem) {
+  #title-harvard + div {
+    flex-direction: column;
+    align-items: flex-start;
+  }
+
+  #title-year {
+    margin-top: 0.25rem;
+    margin-left: 0;
+    font-size: 0.875rem;
+    line-height: 1.25rem;
+  }
+}
