--- a/css/main.css
+++ b/css/main.css
@@ -1,7 +1,8 @@
 /* Base */
 /* ----------------------------------------------------------*/
 * {
-  box-sizing: border-box;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
 }
 
 ::-webkit-selection {
@@ -62,11 +63,29 @@ a, a:visited {
   color: #ac0bd2;
   text-decoration: none;
   border-radius: 0;
-  box-shadow: inset 0 -1px 0 rgba(172, 11, 210, 0.33);
+  -webkit-box-shadow: inset 0 -1px 0 rgba(172, 11, 210, 0.33);
+          box-shadow: inset 0 -1px 0 rgba(172, 11, 210, 0.33);
+  -webkit-transition: color 0.15s cubic-bezier(0.25, 0.1, 0.25, 1),
+              background 0.15s cubic-bezier(0.25, 0.1, 0.25, 1),
+              border-radius 0.15s cubic-bezier(0.25, 0.1, 0.25, 1),
+              -webkit-box-shadow 0.15s cubic-bezier(0.25, 0.1, 0.25, 1);
+  transition: color 0.15s cubic-bezier(0.25, 0.1, 0.25, 1),
+              background 0.15s cubic-bezier(0.25, 0.1, 0.25, 1),
+              border-radius 0.15s cubic-bezier(0.25, 0.1, 0.25, 1),
+              -webkit-box-shadow 0.15s cubic-bezier(0.25, 0.1, 0.25, 1);
+  -o-transition: color 0.15s cubic-bezier(0.25, 0.1, 0.25, 1),
+              background 0.15s cubic-bezier(0.25, 0.1, 0.25, 1),
+              border-radius 0.15s cubic-bezier(0.25, 0.1, 0.25, 1),
+              box-shadow 0.15s cubic-bezier(0.25, 0.1, 0.25, 1);
   transition: color 0.15s cubic-bezier(0.25, 0.1, 0.25, 1),
               background 0.15s cubic-bezier(0.25, 0.1, 0.25, 1),
               border-radius 0.15s cubic-bezier(0.25, 0.1, 0.25, 1),
               box-shadow 0.15s cubic-bezier(0.25, 0.1, 0.25, 1);
+  transition: color 0.15s cubic-bezier(0.25, 0.1, 0.25, 1),
+              background 0.15s cubic-bezier(0.25, 0.1, 0.25, 1),
+              border-radius 0.15s cubic-bezier(0.25, 0.1, 0.25, 1),
+              box-shadow 0.15s cubic-bezier(0.25, 0.1, 0.25, 1),
+              -webkit-box-shadow 0.15s cubic-bezier(0.25, 0.1, 0.25, 1);
 }
 
 a:hover {
@@ -145,7 +164,8 @@ table th, table td {
   font-weight: 700;
   color: black;
   border-radius: 0.2em;
-  box-shadow: inset 0 0 0 1px black;
+  -webkit-box-shadow: inset 0 0 0 1px black;
+          box-shadow: inset 0 0 0 1px black;
 }
 
 #harvard-logos {
@@ -200,35 +220,51 @@ table th, table td {
 /* Flexbox */
 /* ----------------------------------------------------------*/
 .flex-c {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
 }
 
 .flex-v {
-  flex-direction: column;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
 }
 
 .flex-jc-c {
-  justify-content: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
 }
 
 .flex-jc-sb {
-  justify-content: space-between;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
 }
 
 .flex-a-c {
-  align-items: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
 }
 
 .flex-a-s {
-  align-items: stretch;
+  -webkit-box-align: stretch;
+      -ms-flex-align: stretch;
+          align-items: stretch;
 }
 
 .flex-w {
-  flex-wrap: wrap;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
 }
 
 .flex-g-1 {
-  flex-grow: 1;
+  -webkit-box-flex: 1;
+      -ms-flex-positive: 1;
+          flex-grow: 1;
 }
 
 /* General classes */
@@ -297,7 +333,9 @@ table th, table td {
 
 .site-nav ul li {
   position: relative;
-  flex-grow: 1;
+  -webkit-box-flex: 1;
+      -ms-flex-positive: 1;
+          flex-grow: 1;
 }
 
 .site-nav ul a, .site-nav ul a:visited {
@@ -312,7 +350,8 @@ table th, table td {
   line-height: 2rem;
   text-align: center;
   color: black;
-  box-shadow: inset 0 0 0 1px #ddd;
+  -webkit-box-shadow: inset 0 0 0 1px #ddd;
+          box-shadow: inset 0 0 0 1px #ddd;
   border-radius: 0;
 }
 
@@ -321,13 +360,15 @@ table th, table td {
   z-index: 10;
   color: #f5f5f5;
   border-radius: 0.2em 0.2em 0 0;
-  box-shadow: inset 0 0 0 1px #ac0bd2;
+  -webkit-box-shadow: inset 0 0 0 1px #ac0bd2;
+          box-shadow: inset 0 0 0 1px #ac0bd2;
   border-radius: 0;
 }
 
 .site-nav ul a.active {
   background: black;
-  box-shadow: inset 0 0 0 1px black;
+  -webkit-box-shadow: inset 0 0 0 1px black;
+          box-shadow: inset 0 0 0 1px black;
 }
 
 .site-nav ul li:first-child a,
@@ -342,7 +383,9 @@ table th, table td {
 
 .site-nav {
   -webkit-user-select: none;
-  user-select: none;
+  -moz-user-select: none;
+   -ms-user-select: none;
+       user-select: none;
 }
 
 .site-nav input,
@@ -369,7 +412,11 @@ table th, table td {
   padding: 0.75rem 0.5rem;
   background: #ac0bd2;
   border-radius: 0.25rem;
+  -webkit-transition: -webkit-transform 0.5s cubic-bezier(0.25, 0.1, 0.25, 1);
+  transition: -webkit-transform 0.5s cubic-bezier(0.25, 0.1, 0.25, 1);
+  -o-transition: transform 0.5s cubic-bezier(0.25, 0.1, 0.25, 1);
   transition: transform 0.5s cubic-bezier(0.25, 0.1, 0.25, 1);
+  transition: transform 0.5s cubic-bezier(0.25, 0.1, 0.25, 1), -webkit-transform 0.5s cubic-bezier(0.25, 0.1, 0.25, 1);
 }
 
 .site-nav .nav-hamburger div {
@@ -380,13 +427,28 @@ table th, table td {
   background: #f5f5f5;
   border-radius: 0.1875rem;
   z-index: 1;
+  -webkit-transition: background 0.5s cubic-bezier(0.25, 0.1, 0.25, 1),
+              opacity 0.55s cubic-bezier(0.25, 0.1, 0.25, 1),
+              -webkit-transform 0.5s cubic-bezier(0.25, 0.1, 0.25, 1);
+  transition: background 0.5s cubic-bezier(0.25, 0.1, 0.25, 1),
+              opacity 0.55s cubic-bezier(0.25, 0.1, 0.25, 1),
+              -webkit-transform 0.5s cubic-bezier(0.25, 0.1, 0.25, 1);
+  -o-transition: transform 0.5s cubic-bezier(0.25, 0.1, 0.25, 1),
+              background 0.5s cubic-bezier(0.25, 0.1, 0.25, 1),
+              opacity 0.55s cubic-bezier(0.25, 0.1, 0.25, 1);
   transition: transform 0.5s cubic-bezier(0.25, 0.1, 0.25, 1),
               background 0.5s cubic-bezier(0.25, 0.1, 0.25, 1),
               opacity 0.55s cubic-bezier(0.25, 0.1, 0.25, 1);
+  transition: transform 0.5s cubic-bezier(0.25, 0.1, 0.25, 1),
+              background 0.5s cubic-bezier(0.25, 0.1, 0.25, 1),
+              opacity 0.55s cubic-bezier(0.25, 0.1, 0.25, 1),
+              -webkit-transform 0.5s cubic-bezier(0.25, 0.1, 0.25, 1);
 }
 
 .site-nav .nav-hamburger div {
-  transform-origin: 0% 50%;
+  -webkit-transform-origin: 0% 50%;
+      -ms-transform-origin: 0% 50%;
+          transform-origin: 0% 50%;
 }
 
 .site-nav .nav-hamburger div:last-child {
@@ -395,16 +457,22 @@ table th, table td {
 
 .site-nav input:checked ~ .nav-hamburger div {
   opacity: 1;
-  transform: translate(0.3rem, -0.075rem) rotate(45deg);
+  -webkit-transform: translate(0.3rem, -0.075rem) rotate(45deg);
+      -ms-transform: translate(0.3rem, -0.075rem) rotate(45deg);
+          transform: translate(0.3rem, -0.075rem) rotate(45deg);
 }
 
 .site-nav input:checked ~ .nav-hamburger div:nth-last-child(2) {
   opacity: 0;
-  transform: rotate(0deg) scale(0.2, 0.2);
+  -webkit-transform: rotate(0deg) scale(0.2, 0.2);
+      -ms-transform: rotate(0deg) scale(0.2, 0.2);
+          transform: rotate(0deg) scale(0.2, 0.2);
 }
 
 .site-nav input:checked ~ .nav-hamburger div:nth-last-child(1) {
-  transform: translate(0.3rem, +0.075rem) rotate(-45deg);
+  -webkit-transform: translate(0.3rem, +0.075rem) rotate(-45deg);
+      -ms-transform: translate(0.3rem, +0.075rem) rotate(-45deg);
+          transform: translate(0.3rem, +0.075rem) rotate(-45deg);
 }
 
 /* Site footer */
@@ -440,11 +508,14 @@ table th, table td {
   font-weight: 700;
   color: black;
   border-radius: 0.2em;
-  box-shadow: inset 0 0 0 1px black;
+  -webkit-box-shadow: inset 0 0 0 1px black;
+          box-shadow: inset 0 0 0 1px black;
 }
 
 .site-footer-wrap {
-  align-items: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
 }
 
 .site-footer .attributions {
@@ -455,7 +526,8 @@ table th, table td {
 
 .site-footer .attributions a {
   color: inherit;
-  box-shadow: inset 0 -1px 0 0 #ccc;
+  -webkit-box-shadow: inset 0 -1px 0 0 #ccc;
+          box-shadow: inset 0 -1px 0 0 #ccc;
 }
 
 .site-footer .attributions a:hover {
@@ -479,11 +551,29 @@ table th, table td {
   color: black;
   text-decoration: none;
   border-radius: 0;
-  box-shadow: inset 0 0 0 1px #ddd;
+  -webkit-box-shadow: inset 0 0 0 1px #ddd;
+          box-shadow: inset 0 0 0 1px #ddd;
+  -webkit-transition: color 0.15s cubic-bezier(0.25, 0.1, 0.25, 1),
+              background 0.15s cubic-bezier(0.25, 0.1, 0.25, 1),
+              border-radius 0.15s cubic-bezier(0.25, 0.1, 0.25, 1),
+              -webkit-box-shadow 0.15s cubic-bezier(0.25, 0.1, 0.25, 1);
+  transition: color 0.15s cubic-bezier(0.25, 0.1, 0.25, 1),
+              background 0.15s cubic-bezier(0.25, 0.1, 0.25, 1),
+              border-radius 0.15s cubic-bezier(0.25, 0.1, 0.25, 1),
+              -webkit-box-shadow 0.15s cubic-bezier(0.25, 0.1, 0.25, 1);
+  -o-transition: color 0.15s cubic-bezier(0.25, 0.1, 0.25, 1),
+              background 0.15s cubic-bezier(0.25, 0.1, 0.25, 1),
+              border-radius 0.15s cubic-bezier(0.25, 0.1, 0.25, 1),
+              box-shadow 0.15s cubic-bezier(0.25, 0.1, 0.25, 1);
   transition: color 0.15s cubic-bezier(0.25, 0.1, 0.25, 1),
               background 0.15s cubic-bezier(0.25, 0.1, 0.25, 1),
               border-radius 0.15s cubic-bezier(0.25, 0.1, 0.25, 1),
               box-shadow 0.15s cubic-bezier(0.25, 0.1, 0.25, 1);
+  transition: color 0.15s cubic-bezier(0.25, 0.1, 0.25, 1),
+              background 0.15s cubic-bezier(0.25, 0.1, 0.25, 1),
+              border-radius 0.15s cubic-bezier(0.25, 0.1, 0.25, 1),
+              box-shadow 0.15s cubic-bezier(0.25, 0.1, 0.25, 1),
+              -webkit-box-shadow 0.15s cubic-bezier(0.25, 0.1, 0.25, 1);
 }
 
 .site-footer nav li:first-child a {
@@ -499,12 +589,14 @@ table th, table td {
   z-index: 10;
   color: #f2f2f2;
   background: #ac0bd2;
-  box-shadow: inset 0 0 0 1px rgba(172, 11, 210, 0.33);
+  -webkit-box-shadow: inset 0 0 0 1px rgba(172, 11, 210, 0.33);
+          box-shadow: inset 0 0 0 1px rgba(172, 11, 210, 0.33);
 }
 
 .site-footer nav a.active {
   background: black;
-  box-shadow: inset 0 0 0 1px black;
+  -webkit-box-shadow: inset 0 0 0 1px black;
+          box-shadow: inset 0 0 0 1px black;
 }
 
 /* Page Content styles */
@@ -619,8 +711,6 @@ table th, table td {
   border: 1px solid #d5d5e9;
   background-color: #eef;
   padding: 8px 12px;
-  -webkit-border-radius: 3px;
-  -moz-border-radius: 3px;
   border-radius: 3px;
   font-size: 15px;
   overflow: scroll;
@@ -646,8 +736,6 @@ table th, table td {
   border: 1px solid #000;
   background-color: #333;
   color: #FFF;
-  -webkit-border-radius: 3px;
-  -moz-border-radius: 3px;
   border-radius: 3px;
 }
 
@@ -1009,12 +1097,23 @@ table th, table td {
     left: 0;
     margin-top: 0;
     padding: 4.5rem 1rem 1rem 1rem;
-    flex-direction: column;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
     height: auto;
     background: rgba(245, 245, 245, 0.9);
-    transform-origin: 0% 0%;
-    transform: translate(0, -100%);
+    -webkit-transform-origin: 0% 0%;
+        -ms-transform-origin: 0% 0%;
+            transform-origin: 0% 0%;
+    -webkit-transform: translate(0, -100%);
+        -ms-transform: translate(0, -100%);
+            transform: translate(0, -100%);
+    -webkit-transition: -webkit-transform 0.5s cubic-bezier(0.25, 0.1, 0.25, 1);
+    transition: -webkit-transform 0.5s cubic-bezier(0.25, 0.1, 0.25, 1);
+    -o-transition: transform 0.5s cubic-bezier(0.25, 0.1, 0.25, 1);
     transition: transform 0.5s cubic-bezier(0.25, 0.1, 0.25, 1);
+    transition: transform 0.5s cubic-bezier(0.25, 0.1, 0.25, 1), -webkit-transform 0.5s cubic-bezier(0.25, 0.1, 0.25, 1);
   }
 
   .site-nav ul:before {
@@ -1030,11 +1129,15 @@ table th, table td {
   }
 
   .site-nav input:checked ~ ul {
-    transform: none;
+    -webkit-transform: none;
+        -ms-transform: none;
+            transform: none;
   }
 
   .site-nav ul li {
-    flex-grow: 0;
+    -webkit-box-flex: 0;
+        -ms-flex-positive: 0;
+            flex-grow: 0;
   }
 
   .site-nav ul a, .site-nav ul a:visited {
@@ -1097,11 +1200,16 @@ table th, table td {
   }
 
   .site-footer-wrap {
-    align-items: flex-start;
+    -webkit-box-align: start;
+        -ms-flex-align: start;
+            align-items: flex-start;
   }
 
   .site-footer nav ul {
-    flex-direction: column;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
   }
 
   .site-footer nav li {
@@ -1141,8 +1249,13 @@ table th, table td {
 
 @media screen and (max-width: 20rem) {
   #title-harvard + div {
-    flex-direction: column;
-    align-items: flex-start;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    -webkit-box-align: start;
+        -ms-flex-align: start;
+            align-items: flex-start;
   }
 
   #title-year {
