--- a/css/main.css
+++ b/css/main.css
@@ -412,11 +412,6 @@ table th, table td {
   padding: 0.75rem 0.5rem;
   background: #ac0bd2;
   border-radius: 0.25rem;
-  -webkit-transition: -webkit-transform 0.5s cubic-bezier(0.25, 0.1, 0.25, 1);
-  transition: -webkit-transform 0.5s cubic-bezier(0.25, 0.1, 0.25, 1);
-  -o-transition: transform 0.5s cubic-bezier(0.25, 0.1, 0.25, 1);
-  transition: transform 0.5s cubic-bezier(0.25, 0.1, 0.25, 1);
-  transition: transform 0.5s cubic-bezier(0.25, 0.1, 0.25, 1), -webkit-transform 0.5s cubic-bezier(0.25, 0.1, 0.25, 1);
 }
 
 .site-nav .nav-hamburger div {
@@ -427,22 +422,22 @@ table th, table td {
   background: #f5f5f5;
   border-radius: 0.1875rem;
   z-index: 1;
-  -webkit-transition: background 0.5s cubic-bezier(0.25, 0.1, 0.25, 1),
-              opacity 0.55s cubic-bezier(0.25, 0.1, 0.25, 1),
-              -webkit-transform 0.5s cubic-bezier(0.25, 0.1, 0.25, 1);
-  transition: background 0.5s cubic-bezier(0.25, 0.1, 0.25, 1),
-              opacity 0.55s cubic-bezier(0.25, 0.1, 0.25, 1),
-              -webkit-transform 0.5s cubic-bezier(0.25, 0.1, 0.25, 1);
-  -o-transition: transform 0.5s cubic-bezier(0.25, 0.1, 0.25, 1),
-              background 0.5s cubic-bezier(0.25, 0.1, 0.25, 1),
-              opacity 0.55s cubic-bezier(0.25, 0.1, 0.25, 1);
-  transition: transform 0.5s cubic-bezier(0.25, 0.1, 0.25, 1),
-              background 0.5s cubic-bezier(0.25, 0.1, 0.25, 1),
-              opacity 0.55s cubic-bezier(0.25, 0.1, 0.25, 1);
-  transition: transform 0.5s cubic-bezier(0.25, 0.1, 0.25, 1),
-              background 0.5s cubic-bezier(0.25, 0.1, 0.25, 1),
-              opacity 0.55s cubic-bezier(0.25, 0.1, 0.25, 1),
-              -webkit-transform 0.5s cubic-bezier(0.25, 0.1, 0.25, 1);
+  -webkit-transition: background 0.3s cubic-bezier(0.25, 0.1, 0.25, 1),
+              opacity 0.3s cubic-bezier(0.25, 0.1, 0.25, 1),
+              -webkit-transform 0.3s cubic-bezier(0.25, 0.1, 0.25, 1);
+  transition: background 0.3s cubic-bezier(0.25, 0.1, 0.25, 1),
+              opacity 0.3s cubic-bezier(0.25, 0.1, 0.25, 1),
+              -webkit-transform 0.3s cubic-bezier(0.25, 0.1, 0.25, 1);
+  -o-transition: transform 0.3s cubic-bezier(0.25, 0.1, 0.25, 1),
+              background 0.3s cubic-bezier(0.25, 0.1, 0.25, 1),
+              opacity 0.3s cubic-bezier(0.25, 0.1, 0.25, 1);
+  transition: transform 0.3s cubic-bezier(0.25, 0.1, 0.25, 1),
+              background 0.3s cubic-bezier(0.25, 0.1, 0.25, 1),
+              opacity 0.3s cubic-bezier(0.25, 0.1, 0.25, 1);
+  transition: transform 0.3s cubic-bezier(0.25, 0.1, 0.25, 1),
+              background 0.3s cubic-bezier(0.25, 0.1, 0.25, 1),
+              opacity 0.3s cubic-bezier(0.25, 0.1, 0.25, 1),
+              -webkit-transform 0.3s cubic-bezier(0.25, 0.1, 0.25, 1);
 }
 
 .site-nav .nav-hamburger div {
@@ -1109,11 +1104,11 @@ table th, table td {
     -webkit-transform: translate(0, -100%);
         -ms-transform: translate(0, -100%);
             transform: translate(0, -100%);
-    -webkit-transition: -webkit-transform 0.5s cubic-bezier(0.25, 0.1, 0.25, 1);
-    transition: -webkit-transform 0.5s cubic-bezier(0.25, 0.1, 0.25, 1);
-    -o-transition: transform 0.5s cubic-bezier(0.25, 0.1, 0.25, 1);
-    transition: transform 0.5s cubic-bezier(0.25, 0.1, 0.25, 1);
-    transition: transform 0.5s cubic-bezier(0.25, 0.1, 0.25, 1), -webkit-transform 0.5s cubic-bezier(0.25, 0.1, 0.25, 1);
+    -webkit-transition: -webkit-transform 0.3s cubic-bezier(0.25, 0.1, 0.25, 1);
+    transition: -webkit-transform 0.3s cubic-bezier(0.25, 0.1, 0.25, 1);
+    -o-transition: transform 0.3s cubic-bezier(0.25, 0.1, 0.25, 1);
+    transition: transform 0.3s cubic-bezier(0.25, 0.1, 0.25, 1);
+    transition: transform 0.3s cubic-bezier(0.25, 0.1, 0.25, 1), -webkit-transform 0.3s cubic-bezier(0.25, 0.1, 0.25, 1);
   }
 
   .site-nav ul:before {
@@ -1150,6 +1145,10 @@ table th, table td {
     line-height: 3rem;
     border-radius: 0;
     background: #f5f5f5;
+  }
+
+  .site-nav ul a.active {
+    background: black;
   }
 
   .site-nav ul li:first-child a,
