--- a/_layouts/default_2019.html
+++ b/_layouts/default_2019.html
@@ -18,4 +18,11 @@
 
   </body>
 
+  <script>
+    setTimeout(function() {
+      var classes = document.body.getAttribute('class');
+      document.body.setAttribute('class', classes + ' ready');
+    }, 300);
+  </script>
+
 </html>
