--- a/_layouts/schedule_2019.html
+++ b/_layouts/schedule_2019.html
@@ -4,9 +4,9 @@ layout: page_2019
 <div id="schedule">
 
   <iframe
-    src="https://docs.google.com/spreadsheets/d/1PCquh7LJrFXJru--H1Pww2y14_2cpdzQDgbQ3exR5OA/pubhtml?gid=65899131&amp;single=true&amp;widget=true&amp;headers=false"
+    src="https://docs.google.com/spreadsheets/d/e/2PACX-1vSuFP45Y_SP6Gx_pDVd1iXu2ctWhALk2D3wNpdpclIcoHSpSu3L6oO3rwvesdyCawbnJtNc8x721Wwy/pubhtml?gid=65899131&amp;single=true&amp;widget=true&amp;headers=false"
     width="100%"
-    height="990"
-  ></iframe>
+    height="990">
+  </iframe>
 
 </div>
