--- a/css/main.css
+++ b/css/main.css
@@ -133,6 +133,12 @@ hr:after {
   border-radius: 0.1rem;
 }
 
+iframe {
+  border: 0;
+  border-radius: 0.25rem;
+  box-shadow: 0 0 0 1px #ddd;
+}
+
 /* Utility */
 .wrap:before,
 .wrap:after {
