Update hamburger animation

--- a/_includes/header_2019.html
+++ b/_includes/header_2019.html
@@ -50,6 +50,12 @@
           <div></div>
         </div>
 
+        <div class="nav-hamburger-static">
+          <div></div>
+          <div></div>
+          <div></div>
+        </div>
+
         <ul class="no-list-style flex-c">
           {% assign spages = site.pages | where_exp: "item" , "item.path contains '2019'" | sort: 'order' %}
 
