--- a/css/main.css
+++ b/css/main.css
@@ -1,3 +1,4 @@
+
 /* Base */
 /* ----------------------------------------------------------*/
 * {
@@ -113,7 +114,9 @@ hr:after {
   position: absolute;
   display: block;
   left: 50%;
-  transform: translate(-50%, 0);
+  -webkit-transform: translate(-50%, 0);
+      -ms-transform: translate(-50%, 0);
+          transform: translate(-50%, 0);
 }
 
 hr:before {
@@ -121,7 +124,8 @@ hr:before {
   width: 1.2rem;
   height: 1.2rem;
   background: #f5f5f5;
-  box-shadow: 0 0 0 1px #ddd;
+  -webkit-box-shadow: 0 0 0 1px #ddd;
+          box-shadow: 0 0 0 1px #ddd;
   border-radius: 0.25rem;
 }
 
@@ -136,7 +140,8 @@ hr:after {
 iframe {
   border: 0;
   border-radius: 0.25rem;
-  box-shadow: 0 0 0 1px #ddd;
+  -webkit-box-shadow: 0 0 0 1px #ddd;
+          box-shadow: 0 0 0 1px #ddd;
 }
 
 /* Utility */
@@ -463,7 +468,8 @@ table th, table td {
 }
 
 .site-nav input,
-.site-nav .nav-hamburger {
+.site-nav .nav-hamburger,
+.site-nav .nav-hamburger-static {
   position: fixed;
   display: none;
   top: 1rem;
@@ -481,14 +487,16 @@ table th, table td {
   -webkit-touch-callout: none;
 }
 
-.site-nav .nav-hamburger {
+.site-nav .nav-hamburger,
+.site-nav .nav-hamburger-static {
   z-index: 3;
   padding: 0.75rem 0.5rem;
   background: #ac0bd2;
   border-radius: 0.25rem;
 }
 
-.site-nav .nav-hamburger div {
+.site-nav .nav-hamburger div,
+.site-nav .nav-hamburger-static div {
   position: relative;
   width: 2rem;
   height: 0.25rem;
@@ -515,9 +523,9 @@ table th, table td {
 }
 
 .site-nav .nav-hamburger div {
-  -webkit-transform-origin: 0% 50%;
-      -ms-transform-origin: 0% 50%;
-          transform-origin: 0% 50%;
+  -webkit-transform-origin: 50% 50%;
+      -ms-transform-origin: 50% 50%;
+          transform-origin: 50% 50%;
 }
 
 .site-nav .nav-hamburger div:last-child {
@@ -525,23 +533,213 @@ table th, table td {
 }
 
 .site-nav input:checked ~ .nav-hamburger div {
-  opacity: 1;
-  -webkit-transform: translate(0.3rem, -0.075rem) rotate(45deg);
-      -ms-transform: translate(0.3rem, -0.075rem) rotate(45deg);
-          transform: translate(0.3rem, -0.075rem) rotate(45deg);
+  -webkit-animation: merge-rotate-cw 0.6s 1 cubic-bezier(0.25, 0.1, 0.25, 1) forwards;
+          animation: merge-rotate-cw 0.6s 1 cubic-bezier(0.25, 0.1, 0.25, 1) forwards;
 }
 
 .site-nav input:checked ~ .nav-hamburger div:nth-last-child(2) {
-  opacity: 0;
-  -webkit-transform: rotate(0deg) scale(0.2, 0.2);
-      -ms-transform: rotate(0deg) scale(0.2, 0.2);
-          transform: rotate(0deg) scale(0.2, 0.2);
+  -webkit-animation: disappear 0.6s 1 cubic-bezier(0.25, 0.1, 0.25, 1) forwards;
+          animation: disappear 0.6s 1 cubic-bezier(0.25, 0.1, 0.25, 1) forwards;
 }
 
 .site-nav input:checked ~ .nav-hamburger div:nth-last-child(1) {
-  -webkit-transform: translate(0.3rem, +0.075rem) rotate(-45deg);
-      -ms-transform: translate(0.3rem, +0.075rem) rotate(-45deg);
-          transform: translate(0.3rem, +0.075rem) rotate(-45deg);
+  -webkit-animation: merge-rotate-ccw 0.6s 1 cubic-bezier(0.25, 0.1, 0.25, 1) forwards;
+          animation: merge-rotate-ccw 0.6s 1 cubic-bezier(0.25, 0.1, 0.25, 1) forwards;
+}
+
+.site-nav .nav-hamburger div {
+  -webkit-animation: merge-rotate-cw-rev 0.6s 1 cubic-bezier(0.25, 0.1, 0.25, 1) forwards;
+          animation: merge-rotate-cw-rev 0.6s 1 cubic-bezier(0.25, 0.1, 0.25, 1) forwards;
+}
+
+.site-nav .nav-hamburger div:nth-last-child(2) {
+  -webkit-animation: appear 0.6s 1 cubic-bezier(0.25, 0.1, 0.25, 1) forwards;
+          animation: appear 0.6s 1 cubic-bezier(0.25, 0.1, 0.25, 1) forwards;
+}
+
+.site-nav .nav-hamburger div:nth-last-child(1) {
+  -webkit-animation: merge-rotate-ccw-rev 0.6s 1 cubic-bezier(0.25, 0.1, 0.25, 1) forwards;
+          animation: merge-rotate-ccw-rev 0.6s 1 cubic-bezier(0.25, 0.1, 0.25, 1) forwards;
+}
+
+@-webkit-keyframes merge-rotate-cw {
+  0% {
+    -webkit-transform: translate(0, 0) rotate(0deg);
+            transform: translate(0, 0) rotate(0deg);
+  }
+  50% {
+    -webkit-transform: translate(0, 0.625rem) rotate(0deg);
+            transform: translate(0, 0.625rem) rotate(0deg);
+  }
+  100% {
+    -webkit-transform: translate(0, 0.625rem) rotate(45deg);
+            transform: translate(0, 0.625rem) rotate(45deg);
+  }
+}
+
+@keyframes merge-rotate-cw {
+  0% {
+    -webkit-transform: translate(0, 0) rotate(0deg);
+            transform: translate(0, 0) rotate(0deg);
+  }
+  50% {
+    -webkit-transform: translate(0, 0.625rem) rotate(0deg);
+            transform: translate(0, 0.625rem) rotate(0deg);
+  }
+  100% {
+    -webkit-transform: translate(0, 0.625rem) rotate(45deg);
+            transform: translate(0, 0.625rem) rotate(45deg);
+  }
+}
+
+@-webkit-keyframes merge-rotate-cw-rev {
+  0% {
+    -webkit-transform: translate(0, 0.625rem) rotate(45deg);
+            transform: translate(0, 0.625rem) rotate(45deg);
+  }
+  50% {
+    -webkit-transform: translate(0, 0.625rem) rotate(0deg);
+            transform: translate(0, 0.625rem) rotate(0deg);
+  }
+  100% {
+    -webkit-transform: translate(0, 0) rotate(0deg);
+            transform: translate(0, 0) rotate(0deg);
+  }
+}
+
+@keyframes merge-rotate-cw-rev {
+  0% {
+    -webkit-transform: translate(0, 0.625rem) rotate(45deg);
+            transform: translate(0, 0.625rem) rotate(45deg);
+  }
+  50% {
+    -webkit-transform: translate(0, 0.625rem) rotate(0deg);
+            transform: translate(0, 0.625rem) rotate(0deg);
+  }
+  100% {
+    -webkit-transform: translate(0, 0) rotate(0deg);
+            transform: translate(0, 0) rotate(0deg);
+  }
+}
+
+@-webkit-keyframes disappear {
+  0% {
+    opacity: 1;
+  }
+  49% {
+    opacity: 1;
+  }
+  51% {
+    opacity: 0;
+  }
+  100% {
+    opacity: 0;
+  }
+}
+
+@keyframes disappear {
+  0% {
+    opacity: 1;
+  }
+  49% {
+    opacity: 1;
+  }
+  51% {
+    opacity: 0;
+  }
+  100% {
+    opacity: 0;
+  }
+}
+
+@-webkit-keyframes appear {
+  0% {
+    opacity: 0;
+  }
+  49% {
+    opacity: 0;
+  }
+  51% {
+    opacity: 1;
+  }
+  100% {
+    opacity: 1;
+  }
+}
+
+@keyframes appear {
+  0% {
+    opacity: 0;
+  }
+  49% {
+    opacity: 0;
+  }
+  51% {
+    opacity: 1;
+  }
+  100% {
+    opacity: 1;
+  }
+}
+
+@-webkit-keyframes merge-rotate-ccw {
+  0% {
+    -webkit-transform: translate(0, 0) rotate(0deg);
+            transform: translate(0, 0) rotate(0deg);
+  }
+  50% {
+    -webkit-transform: translate(0, -0.625rem) rotate(0deg);
+            transform: translate(0, -0.625rem) rotate(0deg);
+  }
+  100% {
+    -webkit-transform: translate(0, -0.625rem) rotate(-45deg);
+            transform: translate(0, -0.625rem) rotate(-45deg);
+  }
+}
+
+@keyframes merge-rotate-ccw {
+  0% {
+    -webkit-transform: translate(0, 0) rotate(0deg);
+            transform: translate(0, 0) rotate(0deg);
+  }
+  50% {
+    -webkit-transform: translate(0, -0.625rem) rotate(0deg);
+            transform: translate(0, -0.625rem) rotate(0deg);
+  }
+  100% {
+    -webkit-transform: translate(0, -0.625rem) rotate(-45deg);
+            transform: translate(0, -0.625rem) rotate(-45deg);
+  }
+}
+
+@-webkit-keyframes merge-rotate-ccw-rev {
+  0% {
+    -webkit-transform: translate(0, -0.625rem) rotate(-45deg);
+            transform: translate(0, -0.625rem) rotate(-45deg);
+  }
+  50% {
+    -webkit-transform: translate(0, -0.625rem) rotate(0deg);
+            transform: translate(0, -0.625rem) rotate(0deg);
+  }
+  100% {
+    -webkit-transform: translate(0, 0) rotate(0deg);
+            transform: translate(0, 0) rotate(0deg);
+  }
+}
+
+@keyframes merge-rotate-ccw-rev {
+  0% {
+    -webkit-transform: translate(0, -0.625rem) rotate(-45deg);
+            transform: translate(0, -0.625rem) rotate(-45deg);
+  }
+  50% {
+    -webkit-transform: translate(0, -0.625rem) rotate(0deg);
+            transform: translate(0, -0.625rem) rotate(0deg);
+  }
+  100% {
+    -webkit-transform: translate(0, 0) rotate(0deg);
+            transform: translate(0, 0) rotate(0deg);
+  }
 }
 
 /* Site footer */
@@ -1243,8 +1441,13 @@ table th, table td {
     border-radius: 0 0 0.2em 0.2em;
   }
 
-  .site-nav .nav-hamburger {
+  .site-nav .nav-hamburger,
+  .site-nav .nav-hamburger-static {
     display: block;
+  }
+
+  body.ready .site-nav .nav-hamburger-static {
+    display: none;
   }
 
   .site-nav .page-link {
