--- a/_includes/header.html
+++ b/_includes/header.html
@@ -3,7 +3,13 @@
   <div class="wrap">
     <div class="site-title-all">
       <div id="title" class="flex-c">
-        <div id="title-logo" class="flex-c flex-a-c"><img src="" alt="Logo"></div>
+        <div id="title-logo" class="flex-c flex-a-c">
+          <img
+            src="{{ site.baseurl }}/assets/images/stat250-logo.svg"
+            alt="Logo"
+            onerror="this.src='{{ site.baseurl }}/assets/images/stat250-logo.png'"
+          />
+        </div>
         <div id="title-text" class="flex-c flex-v">
           <div id="title-harvard">Harvard</div>
           <div class="flex-c">
@@ -16,52 +22,62 @@
       </div>
     </div>
 
-    <div id="harvard-logo">
+    <div id="harvard-logos">
       <img
-        id="harvard-logo-img"
+        class="harvard-logo"
         src="{{ site.baseurl }}/assets/images/harvard-seas-logo.svg"
-        alt="Harvard Logo"
+        alt="Harvard SEAS Logo"
         onerror="this.src='{{ site.baseurl }}/assets/images/harvard-seas-logo.png'"
+      />
+      <img
+        class="harvard-logo"
+        src="{{ site.baseurl }}/assets/images/harvard-fas-logo.png"
+        alt="Harvard FAS Logo"
       />
     </div>
 
   </div>
 
   <div class="wrap">
-    <nav class="site-nav">
-      <a href="#" class="menu-icon">
-        <svg version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
-           viewBox="0 0 18 15" enable-background="new 0 0 18 15" xml:space="preserve">
-          <path fill="#505050" d="M18,1.484c0,0.82-0.665,1.484-1.484,1.484H1.484C0.665,2.969,0,2.304,0,1.484l0,0C0,0.665,0.665,0,1.484,0
-            h15.031C17.335,0,18,0.665,18,1.484L18,1.484z"/>
-          <path fill="#505050" d="M18,7.516C18,8.335,17.335,9,16.516,9H1.484C0.665,9,0,8.335,0,7.516l0,0c0-0.82,0.665-1.484,1.484-1.484
-            h15.031C17.335,6.031,18,6.696,18,7.516L18,7.516z"/>
-          <path fill="#505050" d="M18,13.516C18,14.335,17.335,15,16.516,15H1.484C0.665,15,0,14.335,0,13.516l0,0
-            c0-0.82,0.665-1.484,1.484-1.484h15.031C17.335,12.031,18,12.696,18,13.516L18,13.516z"/>
-        </svg>
-      </a>
+    <nav class="site-nav" aria-label="Main menu">
+      <div id="toggable-menu">
 
-      <ul class="no-list-style flex-c">
-        {% assign spages = site.pages | sort: 'order' %}
+        <input type="checkbox" />
 
-        {% for spage in spages %}
-          {% unless spage.url == "/" or spage.url == "/redirects.json" or spage.exclude or spage.nomenu %}
+        <div class="nav-hamburger">
+          <div></div>
+          <div></div>
+          <div></div>
+        </div>
+
+        <div class="nav-hamburger-static">
+          <div></div>
+          <div></div>
+          <div></div>
+        </div>
+
+        <ul class="no-list-style flex-c">
+          {% assign spages = site.pages | where_exp: "item" , "item.path contains '2019'" | sort: 'order' %}
+
+          {% for spage in spages %}
+            {% unless spage.url == "/" or spage.url == "/redirects.json" or spage.exclude or spage.nomenu %}
+            <li>
+              <a
+                href="{{ spage.url | prepend: site.baseurl }}"
+                class="{% if page.url == spage.url %}active{% endif %}"
+              >
+                {{ spage.menu }}
+              </a>
+            </li>
+            {% endunless %}
+          {% endfor %}
           <li class="flex-g-1">
-            <a
-              href="{{ spage.url | prepend: site.baseurl }}"
-              class="{% if page.url == spage.url %}active{% endif %}"
-            >
-              {{ spage.menu }}
+            <a href="https://canvas.harvard.edu/courses/62138">
+              Canvas
             </a>
           </li>
-          {% endunless %}
-        {% endfor %}
-        <li class="flex-g-1">
-          <a href="https://canvas.harvard.edu/courses/61741">
-            Canvas
-          </a>
-        </li>
-      </ul>
+        </ul>
+      </div>
     </nav>
 
   </div>
